# poni

./: .gitignore  .mcp.json  README.md  opencode.jsonc  pyproject.toml
.github/workflows/: README.md  ci-cd.yml
.poni/: config.local.toml  config.toml
.poni/memory/: patterns.toml
docs/: README.md.old  TASK.md  features.md  investor summary.md  summary.md
docs/commands/: docs.md  init.md  memory.md  serve.md  tools.md  validate.md
scripts/: hello.sh
src/poni/: __init__.py  __main__.py
src/poni/cli/: __init__.py  docs.py  enforce.py  init.py  main.py  memory.py  serve.py  tools.py  validate.py
src/poni/config/: __init__.py  detection.py  loader.py  models.py  secrets.py
src/poni/docs/: __init__.py  generator.py  lock.py
src/poni/enforcement/: __init__.py  hooks.py  lifecycle.py  rules.py
src/poni/mcp/: __init__.py  policy.py  proxy.py  server.py  tools.py
src/poni/memory/: __init__.py  store.py
src/poni/presets/: __init__.py  go.py  python.py  rust.py  typescript.py
src/poni/tools/: __init__.py  cli_wrapper.py  executor.py
tests/: __init__.py  conftest.py
tests/test_config/: test_models.py  test_secrets.py
tests/test_enforcement/: __init__.py  test_rules.py
tests/test_mcp/: test_policy.py
tests/test_memory/: test_store.py
